# mlops-study

./: .gitignore  README.md  pyproject.toml
doc/: .$mlops-study.drawio.bkp  mlops-study.drawio
mlops_study/: api.py  app.py  domains.py  schemas.py
mlops_study/adapters/inbound/: ListDatabase.py
mlops_study/ports/inbound/: DatabaseInterface.py
tests/: test_api.py
