[tool.poetry]
name = "mlops-study"
version = "0.1.0"
description = ""
authors = ["ofelipp <ofelippm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
boto3 = "^1.34.129"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.4.9"
httpx = "^0.27.0"


[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
